; ModuleID = '/home/carl/AnghaBench/linux/fs/nfsd/extr_nfs4state.c_unhash_lockowner_locked.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfsd/extr_nfs4state.c_unhash_lockowner_locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfs4_lockowner = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, %struct.nfs4_client* }
%struct.nfs4_client = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nfs4_lockowner*)* @unhash_lockowner_locked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @unhash_lockowner_locked(%struct.nfs4_lockowner* %0) #0 {
  %2 = alloca %struct.nfs4_lockowner*, align 8
  %3 = alloca %struct.nfs4_client*, align 8
  store %struct.nfs4_lockowner* %0, %struct.nfs4_lockowner** %2, align 8
  %4 = load %struct.nfs4_lockowner*, %struct.nfs4_lockowner** %2, align 8
  %5 = getelementptr inbounds %struct.nfs4_lockowner, %struct.nfs4_lockowner* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 1
  %7 = load %struct.nfs4_client*, %struct.nfs4_client** %6, align 8
  store %struct.nfs4_client* %7, %struct.nfs4_client** %3, align 8
  %8 = load %struct.nfs4_client*, %struct.nfs4_client** %3, align 8
  %9 = getelementptr inbounds %struct.nfs4_client, %struct.nfs4_client* %8, i32 0, i32 0
  %10 = call i32 @lockdep_assert_held(i32* %9)
  %11 = load %struct.nfs4_lockowner*, %struct.nfs4_lockowner** %2, align 8
  %12 = getelementptr inbounds %struct.nfs4_lockowner, %struct.nfs4_lockowner* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = call i32 @list_del_init(i32* %13)
  ret void
}

declare dso_local i32 @lockdep_assert_held(i32*) #1

declare dso_local i32 @list_del_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
